<resources>
    <string name="about_app" translatable="false">©2019 andan67</string>
    <string name="about_to_delete_route">You\'re about to delete the route</string>
    <string name="about_to_delete_track">You\'re about to delete the track</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>
    <string name="button_end_here">End here</string>
    <string name="button_insert_start">Start/End</string>
    <string name="creator_clear_waypoints">Clear waypoints</string>
    <string name="credits">Credits</string>
    <string name="credits_rambler_copy">This app is forked from this great app for managing gpx files
        \n©2015–2017 nwg (Piotr Miller)</string>
    <string name="credits_rambler_name" translatable="false">
        <a href="https://github.com/nwg-piotr/RamblerGPXEditor">Rambler GPX Editor</a>
    </string>
    <string name="credits_aosp_copy" translatable="false">©2017 The Android Open Source Project.</string>
    <string name="credits_aosp_name" translatable="false">
        <a href="https://source.android.com">Android Open Source Project</a>
    </string>
    <string name="credits_btn" translatable="false">Credits</string>
    <string name="credits_filebrowser_copy" translatable="false">©Alexey Vassiliev</string>
    <string name="credits_filebrowser_name" translatable="false">
        <a href="https://github.com/vaal12/AndroidFileBrowser">AndroidFileBrowser</a>
    </string>
    <string name="credits_karambola_copy">- GPX format import/export/manipulation tools;
        \n- POI/routes view filtering and sorting;
        \n- Path Simplifier - the Track2Route on the fly conversion and route optimization engine;
        \n©2016 Karambola (Afonso Santos).
    </string>
    <string name="credits_karambola_name" translatable="false">
        <a href="https://sourceforge.net/projects/geokarambola">GeoKarambola library</a>
    </string>
    <string name="credits_osmbonuspack_name" translatable="false">
        <a href="https://github.com/MKergall/osmbonuspack">OSMBonusPack</a>
    </string>
    <string name="credits_osmdroid_name" translatable="false">
        <a href="https://github.com/osmdroid/osmdroid">osmdroid</a>
    </string>
    <string name="credits_mapquest_name" translatable="false">
        <a href="https://www.mapquest.com">MapQuest</a>
    </string>
    <string name="credits_osrm_name" translatable="false">
        <a href="http://project-osrm.org">Open Source Routing Machine</a>
    </string>
    <string name="credits_routing_mapquest" translatable="false">Routing by <u>MapQuest</u></string>
    <string name="credits_routing_osrm" translatable="false">Routing by <u>OSRM</u> Demo Server</string>
    <string name="credits_logo">App logo by <a href="https://github.com/edskeye">edskeye</a></string>
    <string name="github">
        <a href="https://github.com/andan67/WormNav">Project on GitHub</a>
    </string>
    <string name="current_folder">Current folder: %1$s</string>
    <string name="default_file_corrupted">default file not found or corrupted - creating a new one</string>
    <string name="default_files_saved">Default data files saved</string>
    <string name="delete_source_track">Delete source track</string>
    <string name="dialog_about" translatable="false">WormNav</string>
    <string name="dialog_all">All</string>
    <string name="dialog_append">Append</string>
    <string name="dialog_apply">Apply</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_clear">Clear</string>
    <string name="dialog_clear_pois">Clear all POI?</string>
    <string name="dialog_clear_routes">Clear all routes?</string>
    <string name="dialog_clear_tracks">Clear all tracks?</string>
    <string name="dialog_confirm_clear_title">Clearing data</string>
    <string name="dialog_confirm_clear_message">Do you really want to clear current data?</string>
    <string name="dialog_data_changed_message">Changes you made have not yet been saved. Save now?</string>
    <string name="dialog_data_changed_title">Data changed</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_delete_route">Delete route?</string>
    <string name="dialog_delete_route_message">You are about to delete the \"%1$s\" route.</string>
    <string name="dialog_delete_track_message">You are about to delete the \"%1$s\" track.</string>
    <string name="dialog_discard">Discard</string>
    <string name="dialog_dont_save">Don\'t save</string>
    <string name="dialog_edit_points">Edit points</string>
    <string name="dialog_filter_age">Filter by Age (days)</string>
    <string name="dialog_filter_clear">Clear</string>
    <string name="dialog_filter_dst">Filter by Distance (km)</string>
    <string name="dialog_filter_lenth">Filter by Length (km)</string>
    <string name="dialog_filter_routedst">Distance to route (km)</string>
    <string name="dialog_filter_set">Set filter</string>
    <string name="dialog_filter_type">Filter by Types</string>
    <string name="dialog_insert">Insert</string>
    <string name="dialog_insert_b4">Insert B4</string>
    <string name="dialog_insert_message">Add %1$s as a way point?</string>
    <string name="dialog_loading_data">Loading data</string>
    <string name="dialog_manually">Lat/Lon (GPS format)</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_overwrite_message">Do you want to overwrite current file?</string>
    <string name="dialog_overwrite_title">File exists</string>
    <string name="dialog_poi2wpt">POI to Wpt</string>
    <string name="dialog_poi_changed_message">POI modified. Apply changes?</string>
    <string name="dialog_pois_filter_title">POI view filter</string>
    <string name="dialog_route_changed_message">The route has been modified. Apply changes?</string>
    <string name="dialog_routes_filter_title">Routes view filter</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_save_changes_save">Save</string>
    <string name="dialog_save_changes_title">Data changed</string>
    <string name="dialog_savegpx_default" translatable="false">myfile</string>
    <string name="dialog_savegpx_extension" translatable="false">.gpx</string>
    <string name="dialog_savegpx_saveasnew">Save to GPX file</string>
    <string name="dialog_saving_data">Saving data</string>
    <string name="dialog_select_pois">Select POI to import</string>
    <string name="dialog_select_routes_export">Select Routes to export</string>
    <string name="dialog_select_routes_import">Select Routes to import</string>
    <string name="dialog_select_tracks">Select Tracks to convert</string>
    <string name="dialog_select_tracks_export">Select Tracks to export</string>
    <string name="dialog_select_tracks_import">Select Tracks to import</string>
    <string name="dialog_selected">Selected</string>
    <string name="dialog_set_lat_lon">Add</string>
    <string name="dialog_types_of_types">(%1$d of %2$d)</string>
    <string name="dialog_send_to_device_title">Send track/route to Garmin device</string>
    <string name="dialog_send_to_device_apply">Send</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="duplicated_poi">duplicated POI</string>
    <string name="duplicates">duplicates</string>
    <string name="error_opening_file">Error opening file:</string>
    <string name="error_saving_data">Error saving data:</string>
    <string name="failed_creating_file">Failed creating file</string>
    <string name="failed_writing_gpx">Failed writing GPX file</string>
    <string name="file_pick">Pick file</string>
    <string name="filebrowser_name">File Browser</string>
    <string name="folder_empty">Folder is empty</string>
    <string name="folder_select">Select</string>
    <string name="folder_up">Up</string>
    <string name="gnugpl">This program is free software; you can redistribute it and/or modify
    it under the terms of the <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">GNU General Public License version 3.0</a>, as published by
    the Free Software Foundation.</string>
    <string name="imperial">Imperial</string>
    <string name="lat_lon_should_be">Lat should be -90 to 90\nLon should be -180 to 180</string>
    <string name="license_apache20" translatable="false">Licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>
    </string>
    <string name="license_bsd2clause" translatable="false">Licensed under the <a href="https://opensource.org/licenses/BSD-2-Clause">2-clause BSD license</a>
    </string>
    <string name="license_demo_server" translatable="false">The Route Creator activity depends on routing from OSRM Demo Server, and <a href="https://developer.mapquest.com/documentation/open">MapQuest Open APIs</a>, and the <a href="https://opendatacommons.org/licenses/odbl">ODbl license</a> applies to it.</string>
    <string name="license_gnuelesser" translatable="false">Licensed under the <a href="https://www.gnu.org/licenses/lgpl-3.0.en.html">GNU Lesser General Public License Version 3</a>
    </string>
    <string name="license_gpl30" translatable="false">Licensed under the <a href="http://www.gnu.org/licenses/gpl-3.0.en.html">GNU General Public License v3.0</a>
    </string>
    <string name="license_mapquest" translatable="false">©2017 MapQest, Inc. All rights reserved. Please read <a href="https://hello.mapquest.com/terms-of-use">Terms of use</a>.</string>
    <string name="location_unavailable">Location not available</string>
    <string name="manually_lat_desc">Latitude:</string>
    <string name="manually_lon_desc">Longitude:</string>
    <string name="manually_name_desc">POI name:</string>
    <string name="map_pois_clear">Clear all</string>
    <string name="map_pois_enter_latlon">New by Lat/Lon</string>
    <string name="map_pois_import">Import</string>
    <string name="map_pois_save">Export</string>
    <string name="map_pois_save_all">Export all</string>
    <string name="map_pois_save_view">Export filtered view</string>
    <string name="poi_edit_description_label">Description:</string>
    <string name="poi_edit_name_edit">unnamed</string>
    <string name="routes_clear">Clear all routes</string>
    <string name="routes_delete_selected">Delete selected</string>
    <string name="routes_edit_convert_tracks">Import tracks</string>
    <string name="routes_edit_export_multiple">Export</string>
    <string name="routes_edit_import_routes">Import routes</string>
    <string name="routes_edit_selected">Edit selected</string>
    <string name="routes_new_auto">Draw automatically</string>
    <string name="routes_new_manually">Draw manually</string>
    <string name="routes_simplify_selected">Optimize selected</string>
    <string name="settings">Settings</string>
    <string name="settings_map_rotation">Allow map rotation</string>
    <string name="settings_units_label">Units</string>
    <string name="settings_routing_label">Routing server</string>
    <string name="show_poi">Show POI</string>
    <string name="tou_osrm">OSRM Terms of use</string>
    <string name="tou_mapquest">MapQuest Terms of use</string>
    <string name="tracks_clear_all">Clear all tracks</string>
    <string name="tracks_convert">Convert into routes</string>
    <string name="tracks_delete_selected">Delete selected</string>
    <string name="tracks_edit_properties">Edit properties</string>
    <string name="tracks_export">Export tracks</string>
    <string name="tracks_send_selected_to_device">Send selected to device</string>
    <string name="tracks_import">Import tracks</string>
    <string name="version_name" translatable="false">Version: %1$s_beta</string>
    <string name="wp_name">Enter name</string>
    <string name="use_last_path">Use last file path</string>
    <string name="run_with_simulator">Run with simulator</string>
</resources>