<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.andan.android.connectiq.wormnav.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="110"
        android:title="@string/action_about" />

    <item
        android:id="@+id/action_credits"
        android:orderInCategory="120"
        android:title="@string/credits" />

    <item
        android:id="@+id/action_exit"
        android:orderInCategory="130"
        android:title="@string/action_exit" />

</menu>