<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingEnd="20dp"
    android:paddingStart="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/version_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/version_name"
            android:textColor="#333"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/app_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/about_app"
            android:textColor="#333"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/gnu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:linksClickable="true"
            android:text="@string/gnugpl"
            android:textColor="#333"

            android:textSize="14sp" />

        <TextView
            android:id="@+id/github"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:linksClickable="true"
            android:text="@string/github"
            android:textColor="#333"

            android:textSize="14sp" />

    </LinearLayout>

</ScrollView>