<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/units_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_units_label"
            android:textColor="#333"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/units_spinner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="4" />

        <CheckBox
            android:id="@+id/rotationCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/settings_map_rotation"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/useLastPathCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/use_last_path"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/runWithSimulatorCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/run_with_simulator"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>