<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/manually_name_desc"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/manually_name_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:text="@string/poi_edit_name_edit" />

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/manually_lat_desc"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/manually_lat_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="numberSigned|numberDecimal" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/manually_lon_desc"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/manually_lon_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="numberSigned|numberDecimal" />
        </TableRow>

        <TextView
            android:id="@+id/manual_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/poi_edit_description_label" />

        <EditText
            android:id="@+id/manual_description_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textMultiLine"
            android:maxLength="99"
            android:text="" />

    </TableLayout>

</LinearLayout>