<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <EditText
        android:id="@+id/wp_edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:hint="@string/wp_name"
        android:inputType="text"
        android:lines="1" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <Button
                android:id="@+id/start_end_button"
                style="@android:style/Widget.Holo.Button.Borderless.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/button_insert_start"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/end_here_button"
                style="@android:style/Widget.Holo.Button.Borderless.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/button_end_here"
                android:textColor="@color/black" />

        </TableRow>

    </TableLayout>


</LinearLayout>